@@ -15,3 +15,4 @@ Known Issues
 ------------
 - "Load configuration" button does not work with micro-macros
 - Main window components out of proportion.
+- Microwires not distinguished from micros on depth
